# GenAI-Product-Recommandation-Engine

./: .gitignore  README.md  action.py  agent_langgraph.py  decision.py  graph.py  json_analyzer.py  main.py  mcp_server.py  memory.py  models.py  nodes.py  perception.py  pyproject.toml  requirements.txt  state.py
client/: Dockerfile  main.py  requirements.txt
client/application/services/: agent_orchestrator.py  client_history_rag.py  perception.py  reasoning.py
client/domain/decision/: models.py
client/domain/llm/: llm_port.py
client/domain/memory/: memory_port.py  models.py
client/domain/perception/: models.py
client/domain/shared/: state.py
client/domain/tools/: models.py  tool_port.py
client/infrastructure/llm/: gemini_adapter.py  huggingface_adapter.py
client/infrastructure/memory/: faiss_memory_adapter.py
client/infrastructure/tools/: mcp_tool_adapter.py
client/utils/: logger.py
k8s/: argocd-app.yaml
k8s/client/: deployment.yaml
k8s/common/: configmap.yaml  namespace.yaml  secrets.yaml
k8s/server/: deployment.yaml  service.yaml
server/: Dockerfile  demo_mcp.py  main.py  mcp_server.py  pipeline.py  requirements.txt
server/config/: settings.py
server/models/: products.py
server/services/: embedding_service.py  ingestion_service.py  milvus_service.py
server/tools/: product_tools.py
server/utils/: logger.py
src/application/services/: agent_orchestrator.py  perception.py  perception_logic.py  reasoning.py  reasoning_logic.py
src/domain/decision/: models.py
src/domain/llm/: llm_port.py
src/domain/memory/: memory_port.py  models.py
src/domain/models/: state.py
src/utils/: logger.py
tests/: conftest.py
tests/e2e/: test_workflow.py
(+21 files in other folders)
