[project]
name = "rag-mcp"
version = "0.1.0"
description = "MCP RAG Agent"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "cachetools==5.5.2",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "dotenv==0.9.9",
    "exceptiongroup==1.2.2",
    "faiss-cpu==1.10.0",
    "fastmcp==2.2.0",
    "google-auth==2.39.0",
    "google-genai==1.11.0",
    "h11==0.14.0",
    "httpcore==1.0.8",
    "httpx==0.28.1",
    "httpx-sse==0.4.0",
    "idna==3.10",
    "lxml==5.3.2",
    "markdown-it-py==3.0.0",
    "markitdown==0.1.1",
    "mcp==1.6.0",
    "mdurl==0.1.2",
    "mouseinfo==0.1.3",
    "openapi-pydantic==0.5.1",
    "pillow==11.2.1",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pyautogui==0.9.54",
    "pydantic==2.11.3",
    "pydantic-core==2.33.1",
    "pydantic-settings==2.8.1",
    "pygetwindow==0.0.9",
    "pygments==2.19.1",
    "pymsgbox==1.0.9",
    "pyobjc-core==11.0",
    "pyobjc-framework-cocoa==11.0",
    "pyobjc-framework-quartz==11.0",
    "pyperclip==1.9.0",
    "pyrect==0.2.0",
    "pyscreeze==1.0.1",
    "python-dotenv==1.1.0",
    "python-pptx==1.0.2",
    "pytweening==1.2.0",
    "requests==2.32.3",
    "rich==14.0.0",
    "rsa==4.9.1",
    "rubicon-objc==0.5.0",
    "shellingham==1.5.4",
    "sniffio==1.3.1",
    "sse-starlette==2.2.1",
    "starlette==0.46.2",
    "tqdm>=4.67.1",
    "typer==0.15.2",
    "typing-extensions==4.13.2",
    "typing-inspection==0.4.0",
    "urllib3==2.4.0",
    "uvicorn==0.34.1",
    "websockets==15.0.1",
    "xlsxwriter==3.2.3",
]
